<resources>
    <string name="app_name">OpenAI Chatter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="main_page">Main Page</string>
    <string name="text_completion">Text Completion</string>
    <string name="generate_image">Generate Image</string>
    <string name="create_image">Create Image</string>
    <string name="edit_image">Edit Image</string>
</resources>