<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.bitpunchlab.android.openaichatter.userAccount.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/toCreateAccountAction"
            app:destination="@id/createAccountFragment" />

        <action
            android:id="@+id/toMainAction"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/MainFragment"
        android:name="com.bitpunchlab.android.openaichatter.MainFragment"
        android:label="@string/main_page"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/createAccountFragment"
        android:name="com.bitpunchlab.android.openaichatter.userAccount.CreateAccountFragment"
        android:label="@string/create_account"
        tools:layout="@layout/fragment_create_account" />
</navigation>